# esp_mesh_iot

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  html_minify.py  html_to_macro.py  minify.bat  minify_to_macro.bat  partitions.csv  sdkconfig
components/web_server/: CMakeLists.txt  web_server.c
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
data/: index.html  mesh-graph.html
html/: config.html  index.html  mesh-graph.html  mesh-tree.html  mesh_graph.html  min_index.html  min_mesh_graph.html
main/: CMakeLists.txt  Kconfig.projbuild  app_config.c  app_config.h  app_modes.c  app_modes.h  config_ip_addr.c  config_ip_addr.h  html_builder.c  html_builder.h  html_macros.h  html_source.h  main.c  mesh_network.c  mesh_network.h  mesh_tree.c  mesh_tree.h  messages.c  messages.h  ota.c  ota.h  utils.c  utils.h  web_server.c  web_server.h  web_socket.c  web_socket.h  wifi_config.c  wifi_config.h
